# cargo-udeps

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  18.patch  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cleanup-cache.sh
.github/: dependabot.yml
.github/workflows/: cache-cleanup.yml  ci.yml
src/: defs.rs  lib.rs  main.rs
tests/: cfg-test.rs  check-macro-with-transitive-flag.rs  ignore.rs  nightly-features.rs  non-lib-build-dep.rs  normal-dev-build.rs  unused-byteorder.rs  unused-transitive.rs  used-withdash.rs  version_exists.rs
tests/runner/: mod.rs
tests/testsuite/: Cargo.toml
tests/testsuite/src/: lib.rs  main.rs
