[package]
name = "cargo-udeps"
version = "0.1.41"
authors = ["est31 <MTest31@outlook.com>", "Ryo Yamashita <qryxip@gmail.com>"]
description = "Find unused dependencies in Cargo.toml"
repository = "https://github.com/est31/cargo-udeps"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cargo"]
categories = ["development-tools", "development-tools::cargo-plugins"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored-openssl = ["cargo/vendored-openssl"]
vendored-libgit2 = ["cargo/vendored-libgit2"]

[dependencies]
nu-ansi-term = "0.49.0"
cargo = { git = "https://github.com/rust-lang/cargo", branch = "master" }
cargo-util = { git = "https://github.com/rust-lang/cargo", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

# Needed for windows build support with cargo 0.73
# [target.'cfg(windows)'.dependencies.windows-sys]
# version = "0.48"
# features = [
#   "Win32_System_IO",
#   "Win32_Foundation",
#   "Win32_Storage_FileSystem",
#   "Win32_System_Console",
#   "Win32_System_Threading",
#   "Win32_System_JobObjects",
# ]

[dev-dependencies]
pretty_assertions = "1.0"
tempfile = "3.1"

[profile.dev]
debug = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
