[package]
name = "solana__bot"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.14.7"
solana-sdk = "1.14.7"
anchor-lang = "0.26.0"
tokio = { version = "1.25", features = ["full"] }
futures = "0.3"
dashmap = "5.4.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
