[package]
name = "cargo-udeps"
version = "0.1.55"
authors = ["est31 <MTest31@outlook.com>", "Ryo Yamashita <qryxip@gmail.com>"]
description = "Find unused dependencies in Cargo.toml"
repository = "https://github.com/est31/cargo-udeps"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cargo"]
categories = ["development-tools", "development-tools::cargo-plugins"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored-openssl = ["cargo/vendored-openssl"]
vendored-libgit2 = ["cargo/vendored-libgit2"]

[dependencies]
nu-ansi-term = "0.50.0"
cargo = "0.87.0"
cargo-util = "0.2.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "1.0"
tempfile = "3.1"

[profile.dev]
debug = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
